--- a/.gitignore
+++ b/.gitignore
@@ -113,3 +113,7 @@ dmypy.json
 # Pyre type checker
 .pyre/
 guess_value_iterations_guesses
+guess_value_iterations_guesses
+guess_value_iterations_guesses.csv
+guess_value_iterations_guesses
+guess_value_iterations_guesses
