--- a/.gitignore
+++ b/.gitignore
@@ -117,3 +117,4 @@ guess_value_iterations_guesses
 guess_value_iterations_guesses.csv
 guess_value_iterations_guesses
 guess_value_iterations_guesses
+guess_value_iterations_guesses
