--- a/.gitignore
+++ b/.gitignore
@@ -118,3 +118,4 @@ guess_value_iterations_guesses.csv
 guess_value_iterations_guesses
 guess_value_iterations_guesses
 guess_value_iterations_guesses
+guess_value_iterations_guesses
