--- a/.gitignore
+++ b/.gitignore
@@ -119,3 +119,4 @@ guess_value_iterations_guesses
 guess_value_iterations_guesses
 guess_value_iterations_guesses
 guess_value_iterations_guesses
+*.gif
